# test_my_repo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  OWNERS  README.md  Third_Party_Open_Source_Software_Notice  pyproject.toml  requirements.txt  setup.py
.gitee/: PULL_REQUEST_TEMPLATE.md
ci/: access_control_test.py  build.sh  cov.sh
cmake/: config.cmake  func.cmake  intf.cmake  makeself.cmake
cmake/util/: ascendc_bin_param_build.py  code_channel_infer.py  const_var.py  opdesc_parser.py  tiling_data_def_build.py
docs/api/: README.md
docs/get_started/: compile.md  from-scratch.md  patcher.md
include/csrc/: OpApiCommon.h  common.h  functions.h  utils.h
include/ge/: utils.h
include/log/: log.h
include/onnx/: common.h
kernels/: CMakeLists.txt
kernels/op_host/: OWNERS  add_relu.cpp  add_relu_tiling.h  assign_score_withk.cpp  assign_score_withk_grad.cpp  assign_score_withk_tiling.h  batch_matmul_vector_tiling.cpp  batch_matmul_vector_tiling.h  bev_pool.cpp  bev_pool_tiling.h  bev_pool_v3.cpp  bev_pool_v3_tiling.h  border_align.cpp  border_align_grad.cpp  border_align_grad_tiling.h  border_align_tiling.h  box_iou.cpp  box_iou_tiling.h  boxes_overlap_bev.cpp  boxes_overlap_bev_tiling.h  boxes_overlap_bev_v1.cpp  boxes_overlap_bev_v1_tiling.h  cal_anchors_heading.cpp  cal_anchors_heading_tiling.h  calc_poly_start_end_sl.cpp  calc_poly_start_end_sl_tiling.h  cartesian_to_frenet1.cpp  cartesian_to_frenet1.h  common.h  deformable_aggregation.cpp  deformable_aggregation_grad.cpp  deformable_aggregation_grad_tiling.h  deformable_aggregation_tiling.h  deformable_conv2d.cpp  deformable_conv2d_grad.cpp  deformable_conv2d_grad_tiling.h  deformable_conv2d_tiling.h  diff_iou_rotated_sort_vertices.cpp  diff_iou_rotated_sort_vertices_tiling.h  draw_gaussian_to_heatmap.cpp  (+107 more)
kernels/op_kernel/: add_relu.cpp  assign_score_withk.cpp  assign_score_withk_grad.cpp  batch_matmul_vector.cpp  bev_pool.cpp  bev_pool.h  bev_pool_grad.cpp  bev_pool_v2.cpp  bev_pool_v2.h  bev_pool_v2_grad.cpp  bev_pool_v3.cpp  bev_pool_v3_grad.cpp  border_align.cpp  border_align_grad.cpp  box_iou.cpp  boxes_operator_utils.h  boxes_overlap_bev.cpp  boxes_overlap_bev_v1.cpp  cal_anchors_heading.cpp  calc_poly_start_end_sl.cpp  cartesian_to_frenet1.cpp  common.h  deformable_aggregation.cpp  deformable_aggregation_grad.cpp  deformable_conv2d.cpp  deformable_conv2d_grad.cpp  diff_iou_rotated_sort_vertices.cpp  draw_gaussian_to_heatmap.cpp  dynamic_scatter.cpp  dynamic_scatter_base.h  dynamic_scatter_grad.cpp  dynamic_scatter_grad_base.h  dynamic_scatter_grad_max.h  dynamic_scatter_grad_mean.h  dynamic_scatter_grad_sum.h  dynamic_scatter_max.h  dynamic_scatter_mean.h  dynamic_scatter_sum.h  dynamic_voxelization.cpp  furthest_point_sampling.cpp  (+70 more)
model_examples/BEVDepth/: README.md  bevdepth.patch  lightning.patch
model_examples/BEVDet/: BEVDet.patch  README.md  requirements.txt
model_examples/BEVFormer/: README.md  bev_former_config.patch  mmcv_config.patch  mmdet3d_config.patch  mmdet_config.patch  requirements.txt
model_examples/BEVFusion/: README.md  bevfusion.patch  mmcv.patch  mmengine.patch
model_examples/BEVNeXt/: README.md  bevnext.patch  mmdetection3d.patch  requirements.txt
model_examples/CenterNet/: CenterNet.patch  README.md
model_examples/CenterPoint/: 2.5_requirements.txt  OpenPCDet_npu.patch  README.md
model_examples/DETR/: README.md  detr.patch
model_examples/DETR3D/: README.md  detr3d.patch  mmcv.patch  mmdet.patch  mmdet3d.patch
model_examples/Deformable-DETR/: Deformable-DETR_npu.patch  README.md  requirements.txt  run.sh
model_examples/DenseTNT/: DenseTNT_npu.patch  README.md
model_examples/FCOS/: README.md  mmdet.patch  mmengine.patch
model_examples/FCOS3D/: README.md  mmdet.patch  mmdetection3d.patch
model_examples/FlashOCC/: README.md  flashocc.patch  mmdet.patch  mmdet3d.patch
model_examples/GameFormer/: README.md  requirements.txt  requirements_waymo.txt
model_examples/GameFormer-Planner/: GameFormer-Planner_NPU.patch  README.md
model_examples/HPTR/: HPTR.patch  README.md
model_examples/HiVT/: README.md  requirements.txt
model_examples/LMDrive/: README.md  npu.patch
model_examples/LaneSegNet/: README.md  lane_seg_net_config.patch  mmcv_config.patch  mmdet3d_config.patch  mmdet_config.patch
model_examples/MagicDriveDiT/: MagicDriveDiT.patch  README.md
model_examples/MapTR/: MapTR.patch  README.md  requirement.txt
model_examples/Mask2Former/: README.md  mmcv.patch  mmdetection.patch  mmsegmentation.patch
model_examples/MatrixVT/: MatrixVT.patch  README.md  mmcv.patch  mmdetection3d.patch
model_examples/MultiPath++/: MultiPath++.patch  README.md
model_examples/PanoOcc/: README.md  mmcv.patch  mmdetection.patch  mmdetection3d.patch  panoocc.patch
model_examples/Panoptic-PolarNet/: Panoptic-PolarNet.patch  README.md
model_examples/PivotNet/: README.md  pivotnet.patch
mx_driving/: __init__.py  common.py  detection.py  fused.py  point.py  preprocess.py  spconv.py
mx_driving/csrc/: AddRelu.cpp  AssignScoreWithk.cpp  AssignTargetOfSingleHead.cpp  BEVPool.cpp  BEVPoolBackward.cpp  BEVPoolV2.cpp  BEVPoolV2Backward.cpp  BEVPoolV3.cpp  BEVPoolV3Backward.cpp  BatchMatmulVector.cpp  BorderAlign.cpp  BorderAlignBackward.cpp  BoxIou.cpp  BoxesOverlapBev.cpp  CMakeLists.txt  CalAnchorsHeading.cpp  CalcPolyStartEndSl.cpp  CartesianToFrenet1.cpp  DeformableAggregation.cpp  DeformableConv2d.cpp  DeformableConv2dBackward.cpp  DiffIouRotatedSortVertices.cpp  DrawGaussianToHeatmap.cpp  DynamicScatter.cpp  DynamicVoxelization.cpp  FurthestPointSampling.cpp  FurthestPointSamplingWithDist.cpp  FusedBiasLeakyRelu.cpp  Gaussian.cpp  GeometricKernelAttentionFunc.cpp  GridSampler2dV2.cpp  GridSampler2dV2Backward.cpp  GroupPoints.cpp  HardVoxelize.cpp  Hypot.cpp  Knn.cpp  MaxPool2d.cpp  MinAreaPolygons.cpp  ModulatedDeformableConv2d.cpp  ModulatedDeformableConv2dBackward.cpp  (+37 more)
onnx_plugin/: CMakeLists.txt  onnx_multi_scale_deformable_attn.cpp  onnx_roi_align_rotated.cpp
scripts/: build_kernel.sh  retry.sh
tests/: README.md
(+359 files in other folders)
