[build-system]
requires = [
    "setuptools",
    "wheel",
    "numpy",
    "pyyaml",
    "cmake",
    "typing-extensions>=4.10.0",
]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.isort]
src_paths = ["mx_driving"]
extra_standard_library = ["typing_extensions"]
skip_gitignore = true
atomic = true
profile = "black"
indent = 4
line_length = 120
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
